--- a/templates/index.html
+++ b/templates/index.html
@@ -244,7 +244,7 @@
           }
         )
         .done(function(data) {
-          console.log(data)
+          // console.log(data)
           $('#gStatus').text(data.status);
           playerPos = 0;
           // Applying List
