--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
       0: 'ごきぶり',
       1: 'くも',
       2: 'かめむし',
-      3: 'ねぶみ',
+      3: 'ねずみ',
       4: 'さそり',
       5: 'はえ',
       6: 'こうもり',
