--- a/templates/index.html
+++ b/templates/index.html
@@ -30,19 +30,20 @@
       <div id='sec2' style='display:none'>
         Your Cards:<br/>
         <ul id='holdcards'></ul></br/>
-        Your Stacked Cards:<br/>
-        <table border='1'>
-          <tr>
-            <td>ごきぶり:<span id='stackcard0'></span></td>
-            <td>くも:<span id='stackcard1'></span></td>
-            <td>かめむし:<span id='stackcard2'></span></td>
-            <td>ねずみ:<span id='stackcard3'></span></td>
-            <td>さそり:<span id='stackcard4'></span></td>
-            <td>はえ:<span id='stackcard5'></span></td>
-            <td>こうもり:<span id='stackcard6'></span></td>
-            <td>かえる:<span id='stackcard7'></span></td>
-          </tr>
-        </table><br>
+        Player's Stacked Cards:<br/>
+        <div id='playerinformation'></div><br/>
+        <!--
+        <li>
+          <ul>ごきぶり:<span id='stackcard0'></span>
+          <ul>くも:<span id='stackcard1'></span>
+          <ul>かめむし:<span id='stackcard2'></span>
+          <ul>ねずみ:<span id='stackcard3'></span>
+          <ul>さそり:<span id='stackcard4'></span>
+          <ul>はえ:<span id='stackcard5'></span>
+          <ul>こうもり:<span id='stackcard6'></span>
+          <ul>かえる:<span id='stackcard7'></span>
+        </li><br>
+      -->
         Routed cards Information:<br/>
         <div id='routed_cards'></div>
         <hr/>
