--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,23 @@
     <meta charset="utf-8">
     <title>ごきぶりポーカー / Kakerlakenpoker</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script Language='JavaScript'>
+    var cardtype = {
+      0: '{{ gettext('type_1') }}',
+      1: '{{ gettext('type_2') }}',
+      2: '{{ gettext('type_3') }}',
+      3: '{{ gettext('type_4') }}',
+      4: '{{ gettext('type_5') }}',
+      5: '{{ gettext('type_6') }}',
+      6: '{{ gettext('type_7') }}',
+      7: '{{ gettext('type_8') }}',
+    }
+    </script>
   </head>
   <body>
     このゲームは２～６人用となっています。<br/>
@@ -40,43 +54,43 @@
         <hr/>
       </div>
       <div id='sec4' style='display:none'>
-        Which card do you wanna send to someone?:<br/>
-        <button id="send">渡す(send)</button><br/>
-        下記から送りたいカードと、送り先を選択して「渡す」ボタンを押してください。<br/>
+        {{ gettext('txt_explain1') }}:<br/>
+        <button id="send">{{ gettext('btn_send') }}</button><br/>
+        {{ gettext('txt_explain2') }}<br/>
         <hr/>
       </div>
       <div id='sec5' style='display:none'>
-        <b>「<span id='fromName'></span>」さん</b>から<b>「<span id='fromType'></span>」</b>としてカードが届きました<br/>
+        <b>「<span id='fromName'></span>」</b>{{ gettext('txt_sendgmessage') }}<b>「<span id='fromType'></span>」</b><br/>
         <br/>
-        Do you wanna answer the card?:<br/>
-        「合っている」「間違っている」ボタンを選択して押してください。<br/>
-        <button id="correct">合っている(correct)</button>&nbsp;&nbsp;
-        <button id="wrong">間違っている(wrong)</button><br/>
+        {{ gettext('txt_explain3') }}:<br/>
+        {{ gettext('txt_explain4') }}<br/>
+        <button id="correct">{{ gettext('btn_correct') }}</button>&nbsp;&nbsp;
+        <button id="wrong">{{ gettext('btn_wrong') }}</button><br/>
         <br/>
-        <button id="confirm">確認する(confirm)</button><br/>
-        カードを確認したい場合は、「確認する」ボタンを押してください。<br/>
-        カードを確認したら「渡す」しかできなくなります<br/>
+        <button id="confirm">{{ gettext('btn_confirm') }}</button><br/>
+        {{ gettext('txt_explain5') }}<br/>
+        {{ gettext('txt_explain6') }}<br/>
         <div id='sec6' style='display:none'>
-        <b>「<span id='confirmedcard'></span>」</b>でした。
+        The card is <b>「<span id='confirmedcard'></span>」</b>
         </div>
         <br/>
-        Do you wanna pass the card?:<br/>
-        <button id="send2">渡す(send)</button><br/>
-        下記から種類を指定し、送り先を選択して「渡す」ボタンを押してください。<br/>
+        {{ gettext('txt_explain7') }}:<br/>
+        <button id="send2">{{ gettext('btn_send') }}</button><br/>
+        {{ gettext('txt_explain8') }}<br/>
         <hr/>
       </div>
       <div id='sec3' style='display:none'>
         <select name='candidatelists' id='candidatelists'></select><br/>
         <br/>
         <select name='typelists' id='typelists'>
-          <option value=0>ごきぶり</option>
-          <option value=1>くも</option>
-          <option value=2>かめむし</option>
-          <option value=3>ねずみ</option>
-          <option value=4>さそり</option>
-          <option value=5>はえ</option>
-          <option value=6>こうもり</option>
-          <option value=7>かえる</option>
+          <option value=0>{{ gettext('type_1') }}</option>
+          <option value=1>{{ gettext('type_2') }}</option>
+          <option value=2>{{ gettext('type_3') }}</option>
+          <option value=3>{{ gettext('type_4') }}</option>
+          <option value=4>{{ gettext('type_5') }}</option>
+          <option value=5>{{ gettext('type_6') }}</option>
+          <option value=6>{{ gettext('type_7') }}</option>
+          <option value=7>{{ gettext('type_8') }}</option>
         </select><br/>
       </div>
       <br/>
